--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "clsx": "^2.1.0",
+    "framer-motion": "^11.0.8",
+    "mini-svg-data-uri": "^1.4.4",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
